# zephyr

./: .gitignore  README.md  west.yml
.github/workflows/: assigner.yml  autodelete.yaml  bsim-tests.yaml  bug_snapshot.yaml  clang.yaml  codecov.yaml  compliance.yml  daily_test_version.yml  doc-build.yml  errno.yml  footprint-tracking.yml  greet_first_time_contributor.yml  hello_world_multiplatform.yaml  maintainer_check.yml  twister.yaml  twister_tests_blackbox.yml
boards/espressif/esp32s3_devkitc/: esp32s3_devkitc_procpu.dts  esp32s3_devkitc_procpu_defconfig
cmake/compiler/gcc/: target.cmake
doc/: requirements.txt
drivers/video/: CMakeLists.txt  Kconfig  Kconfig.esp32_dvp  Kconfig.ov3660  ov3660.c  video_esp32_dvp.c
dts/bindings/video/: ovti,ov3660.yaml
modules/mbedtls/: Kconfig.mbedtls
samples/boards/espressif/apps/button/: CMakeLists.txt
samples/boards/espressif/apps/button/src/: main.c
samples/boards/espressif/apps/lcd/tft/: CMakeLists.txt  README_GUI_CUSTOMIZATION.md  prj.conf
samples/boards/espressif/apps/lcd/tft_console/: CMakeLists.txt  Kconfig  README.md  README_LCD_CONSOLE.md  prj.conf
samples/boards/espressif/apps/mqtt_led/: CMakeLists.txt  Kconfig  prj.conf
samples/boards/espressif/apps/mqtt_led/boards/: esp32s3_devkitc_procpu.overlay
samples/boards/espressif/apps/mqtt_led/src/: main.c
samples/boards/espressif/apps/new/: .gitignore
samples/boards/espressif/apps/new/ble_hid_host/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/button/: CMakeLists.txt  README.md  prj.conf
samples/boards/espressif/apps/new/camera/: CMakeLists.txt  README.rst  prj.conf
samples/boards/espressif/apps/new/camera/src/: main.c
samples/boards/espressif/apps/new/camera_test/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/cloud_ai/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/es7210_test/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/es8311_test/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/face_recognize/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/face_recognize/boards/: esp32s3_devkitc_procpu.overlay
samples/boards/espressif/apps/new/face_recognize/src/: ai_client.c  ai_client.h  ca_cert.h  jpeg_enc.c  jpeg_enc.h  main.c
samples/boards/espressif/apps/new/face_recognize/tools/: capture_selftest.py  hex_to_jpg.ps1
samples/boards/espressif/apps/new/hello_test/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/i2c_scan/: CMakeLists.txt
samples/boards/espressif/apps/new/i2s_test/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/imu_test/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/launcher/: CMakeLists.txt  README.md  prj.conf
samples/boards/espressif/apps/new/launcher/boards/: esp32s3_devkitc_procpu.overlay
samples/boards/espressif/apps/new/launcher/src/: ai_service.c  app_manager.h  audio.c  ble_hid.c  ble_hid.h  launcher_ui.c  launcher_ui.h  main.c  secrets.h.example
samples/boards/espressif/apps/new/launcher/src/apps/: app_ai_assistant.c  app_camera.c  app_face.c  app_imu.c  app_music.c  app_nes.c  app_photos.c  app_terminal.c  song1_30s.pcm
samples/boards/espressif/apps/new/launcher_full/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/launcher_full/src/: ai_client.c  ai_client.h  app_ai_vision.c  app_ai_vision.h  app_camera.c  app_camera.h  app_imu.c  app_imu.h  ca_cert.h  home_ui.c  home_ui.h  main.c  secrets.h.example  tts_client.c  tts_client.h
samples/boards/espressif/apps/new/launcher_nes/: CMakeLists.txt  Kconfig  prj.conf
samples/boards/espressif/apps/new/launcher_nes/boards/: esp32s3_devkitc_procpu.overlay
samples/boards/espressif/apps/new/launcher_nes/src/: ai_service.c  ai_service.h  app_manager.c  base64.h  ble_hid.c  ble_hid.h  boot_splash.c  boot_splash.h  ca_certificate.h  launcher_ui.c  main.c  resource.h  secrets.h.example
samples/boards/espressif/apps/new/launcher_nes/src/apps/: app_ai_assistant.c  app_imu.c  app_nes.c  app_photos.c
samples/boards/espressif/apps/new/launcher_nes/src/nes/: log_wrap.c  memguard.h  osd.c  rom.S.in
samples/boards/espressif/apps/new/lcd_lvgl_test/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/lcd_lvgl_test/boards/: esp32s3_devkitc_procpu.overlay
samples/boards/espressif/apps/new/lcd_lvgl_test/src/: main.c
samples/boards/espressif/apps/new/lcd_test/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/lcd_ui_test/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/lvgl_input/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/nes_emulator/: CMakeLists.txt  prj.conf
samples/boards/espressif/apps/new/nes_emulator/boards/: esp32s3_devkitc_procpu.overlay
samples/boards/espressif/apps/new/nes_emulator/rom/: README.md
samples/boards/espressif/apps/new/nes_emulator/src/: ble_hid.c  ble_hid.h  compat.c  main.c  noftypes.h  osd.c
samples/boards/espressif/apps/new/sdcard_test/: CMakeLists.txt  prj.conf
samples/boards/espressif/esp32-s3-box/cyber_piercer/: CMakeLists.txt  README.rst  prj.conf
samples/boards/espressif/esp32-s3-box/smart_camera/: .gitignore  CMakeLists.txt  README.rst  prj.conf
samples/boards/espressif/esp32-s3-box/smart_camera/boards/: esp32s3_devkitc_procpu.overlay
samples/boards/espressif/esp32-s3-box/smart_camera/pc_server/: README.md  color.py  face.py  object.py  requirements.txt  server.py
samples/boards/espressif/esp32-s3-box/smart_camera/src/: display_ui.c  display_ui.h  jpeg_decoder.c  jpeg_decoder.h  main.c  mjpeg_client.c  mjpeg_client.h  secrets.h.example  track_client.c  track_client.h
samples/boards/espressif/esp32-s3-box/solenoid_test/: CMakeLists.txt  README.rst  prj.conf
samples/boards/espressif/led_rgb/: prj.conf
samples/boards/espressif/led_rgb/boards/: esp32s3.overlay
samples/boards/espressif/led_rgb/src/: main.c
samples/modules/lvgl/demos/boards/: esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay
samples/net/wifi/shell/: prj.conf
scripts/ci/: check_compliance.py
subsys/shell/backends/: shell_uart.c
(+85 files in other folders)
